Combined SRT changes - CCD-6022, CCD-5344, CCD-6358