@@ -21,12 +21,12 @@ import uk.gov.hmcts.ccd.endpoint.exceptions.ServiceException;
 
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.ArrayList;
-import java.util.Collections;
 
 import static com.google.common.collect.Maps.newHashMap;
 import static org.springframework.http.HttpHeaders.ETAG;
@@ -240,7 +240,7 @@ public class DefaultRoleAssignmentRepository implements RoleAssignmentRepository
 
             if (pageNumber == ROLE_ASSIGNMENT_STARTING_PAGE_NUMBER) {
                 totalRecords = Integer.parseInt(Objects.requireNonNull(
-                    responseEntity.getHeaders().get(ROLE_ASSIGNMENT_TOTAL_RECORDS_HEADER)).get(0));
+                    responseEntity.getHeaders().get(ROLE_ASSIGNMENT_TOTAL_RECORDS_HEADER)).getFirst());
                 roleAssignmentResponse.setRoleAssignments(new ArrayList<>(totalRecords));
             }
 
